2016-08-19  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.

2016-07-03  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.
      Solaris 10/11 robust mutex fixes (ITS#8339)
      init cursor in mdb_env_cwalk (ITS#8424)

2016-05-10  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.5 to test
    * Fix overflow of a nearby variable on the stack
      patch from gahr (merge code)

2016-05-09  Danilo Chang  <ray2501@gmail.com>

    * Chase gcc 4.8 warning patch from gahr (merge code)

2016-05-07  Danilo Chang  <ray2501@gmail.com>

    * env open command: let -fixedmap default to false

2016-05-06  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.4 to test

2016-05-05  Danilo Chang  <ray2501@gmail.com>

    * generic/mdb.c: Update LMDB source code.
      Fix MDB_NEXT_DUP after mdb_cursor_del (ITS#8412)
      Fix xcursors after mdb_cursor_del (ITS#8406)
      mdb_drop optimization
      Fix MDB_GET_BOTH on non-dup record (ITS#8393)
    * UTF-8 character stripped issue patch from gahr (merge code)

2016-04-13  Danilo Chang  <ray2501@gmail.com>

    * fix-compiler-warnings patch from gahr (merge code)

2016-02-25  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.3

2016-02-24  Danilo Chang  <ray2501@gmail.com>

    * Improve dbi_handle drop command behavior when del_flag equals 1.
      If del_flag equals 1, delete dbi_handle command.

2016-02-23  Danilo Chang  <ray2501@gmail.com>

    * Add more check in env_handle open -mode option
    * Improve dbi_handle drop command option check
    * Improve dbi_handle del command option check

2016-02-21  Danilo Chang  <ray2501@gmail.com>

    * Setup version to v0.3.2 to test.
    * generic/tclmdb.c: env_handle sync command option add more check
    * generic/tclmdb.c: env_handle set_mapsize/set_maxreaders/set_maxdbs
      command option add more check

2016-02-19  Danilo Chang  <ray2501@gmail.com>
